--- a/index.pug
+++ b/index.pug
@@ -4,8 +4,10 @@ head
   meta(charset="UTF-8")
   meta(name="viewport" content="width=device-width, initial-scale=1.0")
   meta(http-equiv="X-UA-Compatible" content="ie=edge")
+  title Microsoft Office
   link(rel="stylesheet", href="css/bootstrap.min.css")
   link(rel="stylesheet", href="style.css")
+  
 body
 
   header.herader-container
@@ -67,7 +69,30 @@ body
 
                   li.nav-link: a.dropdown-item.list_icon(href="#"): i.fas.fa-user-circle
                     
+  .365-img
+    img.img-fluid.img-365(src="img/RE3BTFp.jpg", alt="365 Logo")
+    .container
+      .text_center-365
 
+        h1.title-principal este es tu 365
+
+        p.text-title cada dia tíenes una oportunidad nueca con office 365
+
+        butto.btn.btn-warning.btn-war.mt-4 para el hogar
+
+        butto.btn.btn-warning.btn-war.mt-3 para el empresas
+
+    .text-info-365
+      .container
+        .text_info_hijo
+
+          h2.sub-title-principal qué es office 365
+
+          p.text_info Office 365 es un servicio de suscripción basado en la nube que reúne las mejores herramientas para la forma de trabajar de hoy en día. Al combinar las mejores aplicaciones de su categoría, como Excel y Outlook, con servicios de gran utilidad en la nube, como OneDrive y Microsoft Teams, Office 365 permite a los usuarios crear y compartir desde cualquier lugar y dispositivo.
+        
+      .tex_info-img
+
+      img.img-fluid(src="img/RE49D7o.webp", alt="")
 
 
 
