--- a/style.css
+++ b/style.css
@@ -135,6 +135,52 @@
     margin-left: -18px;
   }
 
+  .img-365{
+    margin-top: 108px;
+    width: 100%;
+    height: 210px;
+  }
+
+  .text_center-365{
+    text-align: center;
+    text-transform: capitalize;
+  }
+
+  .text_center-365 h1{
+    font-size: 32px;
+    margin-top: 35px;
+  }
+
+  .btn-war{
+    color: white;
+    background-color: #d83b01;
+    border: none;
+    width: 226px;
+  }
+
+  .text-info-365 h2{
+    text-align: center;
+    text-transform: capitalize;
+  }
+
+  .text-info-365{
+    background-color: rgb(231, 231, 231);
+    margin-top: 6rem;
+  }
+
+  .text_info{
+    line-height: 18px;
+  }
+
+  .text_info_hijo{
+    position: relative;
+    top: 50px;
+  }
+
+  .tex_info-img{
+    margin-top: 120px;
+  }
+
   
   
 
