--- a/style.css
+++ b/style.css
@@ -79,7 +79,63 @@
   display: none;
 }
 
-@media screen and (max-width:320px){
+/* Ajustes Maximos */
+
+.text_center-365{
+  text-transform: capitalize;
+  margin-top: 60px;
+  text-align: center;
+}
+
+.btn-war{
+  background-color: #d83b01 !important;
+  width: 230px;
+  text-transform: capitalize;
+  color: white;
+}
+
+.btn-plus{
+  margin-top: 24px !important;
+  margin-left: 30px;
+}
+
+.text_info_hijo{
+  text-align: end;
+}
+
+.text-info-365{
+  background-color: #f5f5f5;
+}
+
+.text_info_hijo h2{
+  text-transform: capitalize;
+  font-size: 42px;
+  margin-bottom: 25px;
+  position: relative;
+  top: 100px;
+}
+
+.text_info_1{
+  width: 343px;
+  text-align: initial;
+  position: relative;
+  left: 600px;
+  top: 85px;
+}
+
+.img_tablet{
+  width: 58%;
+  position: relative;
+  top: -210px;
+  margin-bottom: -210px;
+}
+
+.title_info{
+  text-align: center;
+  margin-top: 140px;
+}
+
+@media screen and (min-width:320px){
 
   .brs{
     font-size: 20px;
@@ -153,14 +209,22 @@
 
   .btn-war{
     color: white;
-    background-color: #d83b01;
+    background-color: #d83b01 !important ;
     border: none;
     width: 226px;
+  }
+
+  .btn-plus {
+    margin-top: 18px !important;
+    margin-left: 0px;
   }
 
   .text-info-365 h2{
     text-align: center;
     text-transform: capitalize;
+    font-size: 30px;
+    margin-bottom: 25px;
+    position: unset;
   }
 
   .text-info-365{
@@ -168,8 +232,17 @@
     margin-top: 6rem;
   }
 
-  .text_info{
+  .text_info_1{
     line-height: 18px;
+    width: auto;
+    text-align: initial;
+    position: unset;
+  }
+
+  .img_tablet{
+    width: 100%;
+    position: unset;
+    margin-bottom: 0px;
   }
 
   .text_info_hijo{
@@ -181,8 +254,82 @@
     margin-top: 120px;
   }
 
-  
-  
+  .text_info-hijo{
+    text-align: center;
+    margin-top: 130px;
+  }
+
+  .title_info{
+    font-size: 26px;
+    text-transform: capitalize;
+  }
+
+  .c-info_icon{
+    margin-top: 60px;
+  }
+
+  .text_icon{
+    font-size: 18px;
+    font-weight: 700;
+    text-transform: capitalize;
+    margin-top: 30px;
+  }
+
+  .link{
+    text-transform: capitalize;
+  }
+
+  .text_info-{
+    text-align: center;
+    text-transform: capitalize;
+  }
 
 }
 
+@media screen and (min-width:768px){
+  
+ 
+
+  .img-microsoft{
+    position: relative;
+    left: 210px;
+  }
+
+  .list-automatic{
+    position: relative;
+    top: 36px;
+    display: initial;
+    right: 213px;
+  }
+
+  .d-ns{
+    display: none;
+  }
+
+  .cicle{
+    display: none;
+  }
+
+  .usser{
+    font-size: 30px;
+  }
+
+  .img-365{
+    margin-top: 108px;
+    width: 100%;
+    height: 430px;
+  }
+
+  .btn-plus{
+    margin-top: 24px !important;
+    margin-left: 24px;
+  }
+
+  .sub-title-principal{
+    position: relative !important;
+    left: 255px;
+    width: 240px;
+    text-align: initial !important;
+  }
+
+}
